fix: overflow of table

--- a/src/styles/Coltivazioni.module.scss
+++ b/src/styles/Coltivazioni.module.scss
@@ -18,4 +18,5 @@
 .table {
   width: 70%;
   padding: 2rem;
+  overflow-x: scroll;
 }
